--- a/software-vaadin/src/main/resources/application.properties
+++ b/software-vaadin/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.org.springframework.security=INFO
 
+server.port=0
+
 security.basic.enabled=false
 security.user.name=admin
 security.user.password=admin
