added some docu

--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -2,7 +2,7 @@ apply plugin : 'org.asciidoctor.convert'
 
 asciidoctor {
     sources {
-        include 'software-cataloque.adoc' 
+        include 'software-catalog.adoc' 
     }
 }
 
