--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -11,7 +11,6 @@ apply plugin: 'eclipse'
 
 jar {
     baseName = 'nuss-software-catalog-shared'
-    version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
 
@@ -19,6 +18,7 @@ repositories { mavenCentral() }
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
+    compile('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
