--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-plugins {
-  id 'org.asciidoctor.convert' version '1.5.3' apply false 
-}
+//plugins {
+//  id 'org.asciidoctor.convert' version '1.5.3' apply false 
+//}
 
 allprojects {
     repositories {
