--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-    ext { springBootVersion = '1.5.9.RELEASE' }
     repositories { mavenCentral() }
     dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") }
 }
@@ -13,12 +12,17 @@ jar {
 }
 sourceCompatibility = 1.8
 
-repositories { mavenCentral() }
-
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-data-rest')
+    
+    compile "com.querydsl:querydsl-core:$querydslVersion"
+    compile "com.querydsl:querydsl-apt:$querydslVersion"
+    compile "com.querydsl:querydsl-jpa:$querydslVersion"
+    
     compile project(':shared')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
