--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -1,23 +1,8 @@
-buildscript {
-	repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.15'
-    }
-}
-
 plugins {
-    id 'org.asciidoctor.convert' version '1.5.3'
+    id 'org.asciidoctor.convert' version '1.5.7'
 }
 
 apply plugin: 'org.asciidoctor.convert'
-
-version = '1.0.0-SNAPSHOT'
-
-asciidoctorj {
-    version = '1.5.5'
-}
 
 asciidoctor {
     backends 'html', 'pdf'
@@ -33,4 +18,4 @@ asciidoctor {
         'idseparator': '-'
 }
 
-build.finalizedBy(asciidoctor)
+//build.finalizedBy(asciidoctor)
