--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,20 +1,20 @@
 buildscript {
-    repositories { 
-     	mavenLocal()
-	    maven {	    
-	        url "http://149.249.4.101/artifactory/repo"
-	    }     	
-    	mavenCentral() 
-    }
+//    repositories { 
+//     	mavenLocal()
+//	    maven {	    
+//	        url "http://149.249.4.101/artifactory/repo"
+//	    }     	
+//    	mavenCentral() 
+//    }
     dependencies { 
     	classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    	classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.15' 
+//    	classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.15' 
     }
 }
 
 plugins {
   id "com.ewerk.gradle.plugins.querydsl" version "1.0.9"
-  id 'org.asciidoctor.convert' version '1.5.3'
+  id 'org.asciidoctor.convert' version '1.5.7'
 }
 
 apply plugin: 'org.asciidoctor.convert'
