--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,21 +1,11 @@
-buildscript {
-    repositories { mavenCentral() }
+plugins { 
+	id "io.spring.dependency-management" version "1.0.4.RELEASE" 
 }
-
-plugins { id "io.spring.dependency-management" version "1.0.4.RELEASE" }
-
-ext { springBootVersion = '1.5.9.RELEASE' }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'project-report'
 
 jar {
     baseName = 'nuss-software-catalog-shared'
 }
 sourceCompatibility = 1.8
-
-repositories { mavenCentral() }
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
@@ -27,11 +17,4 @@ dependencies {
 
 dependencyManagement {
     imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
-}
-
-
-test {
-    testLogging {
-        events "passed", "skipped", "failed"
-    }
 }
