--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,22 @@ subprojects {
 	apply plugin: 'project-report'
 //	apply plugin: 'org.asciidoctor.convert'
 	
+	task sourcesJar(type: Jar, dependsOn: classes) {
+	    classifier = 'sources'
+	    from sourceSets.main.allSource
+	}
+	
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+	    classifier = 'javadoc'
+	    from javadoc.destinationDir
+	}
+	
+	artifacts {
+	    archives sourcesJar
+	    archives javadocJar
+	}
+	
+	
     // Disable the test report for the individual test task
     test {
         reports.html.enabled = false
