added software entities

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.springframework.security=INFO
 security.basic.enabled=false
 security.user.name=admin
 security.user.password=admin
+
+management.security.enabled=false
