--- a/vaadin/build.gradle
+++ b/vaadin/build.gradle
@@ -1,26 +1,40 @@
 buildscript {
-    ext { springBootVersion = '1.5.9.RELEASE' }
-    repositories { mavenCentral() }
     dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'maven'
 
 jar {
     baseName = 'nuss-software-catalog-software-vaadin'
-    version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
-
-repositories { mavenCentral() }
+targetCompatibility = 1.8
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('com.vaadin:vaadin-spring-boot-starter')
+//    compile('de.nuss.spring.boot:nuss-spring-boot-vaadin:1.1.0-SNAPSHOT')
+    
+    
     compile project(':shared')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
+	}
+}
+
+javadoc {
+	enabled = false    
+}
+
+springBoot {
+    backupSource = false
+}
+
+bootRepackage {
+    classifier = 'exec'
 }
