--- a/vaadin/src/main/resources/application.properties
+++ b/vaadin/src/main/resources/application.properties
@@ -2,6 +2,8 @@ logging.level.org.springframework.security=INFO
 
 server.port=8085
 
+spring.application.name=Software Catalog Vaadin
+
 security.basic.enabled=false
 security.user.name=admin
 security.user.password=admin
