--- a/service/src/test/resources/application-test.properties
+++ b/service/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+logging.level.org.springframework=INFO
+
 #h2 driver
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_ON_EXIT=FALSE
