--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ security.user.name=admin
 security.user.password=admin
 
 management.security.enabled=false
+
+# can be used to produces only json and not hal json by default
+#spring.data.rest.defaultMediaType=application/json
