--- a/service/build.gradle
+++ b/service/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile 'org.springframework.data:spring-data-rest-hal-browser'
     
     compile('com.h2database:h2')
     
