split build files

--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -1,6 +1,6 @@
-plugins {
-    id 'org.asciidoctor.convert' version '1.5.7'
-}
+//plugins {
+//    id 'org.asciidoctor.convert' version '1.5.7'
+//}
 
 apply plugin: 'org.asciidoctor.convert'
 
