--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,15 @@
 //	id "io.spring.dependency-management" version "1.0.4.RELEASE" 
 //}
 
+//plugins {
+//  id 'org.asciidoctor.convert' version '1.5.7' apply false
+//}  
+
+plugins {
+//  id 'org.asciidoctor.convert' version '1.5.7' apply false
+  id "com.ewerk.gradle.plugins.querydsl" version "1.0.9" apply false
+}  
+
 allprojects {
     repositories {
         mavenLocal()
@@ -28,19 +37,29 @@ subprojects {
     
 	buildscript {
 	    repositories { 
+	    	jcenter()
 	        mavenLocal()
-		    maven {	    
+		    maven {
+		      url "https://plugins.gradle.org/m2/"
+		    }	        
+		    maven {
 		        url "http://149.249.4.101/artifactory/repo"
 		    }     	
 	    	mavenCentral()  
 	    }
 		dependencies {
+		 		classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.7"
 		        classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.15'
+		        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	    }	    
 	}    
-    
+	
     repositories { 
+    	jcenter()
         mavenLocal()
+        maven {
+      		url "https://plugins.gradle.org/m2/"
+    	}
 	    maven {	    
 	        url "http://149.249.4.101/artifactory/repo"
 	    }     	
@@ -49,6 +68,7 @@ subprojects {
     
 	apply plugin: 'java'
 	apply plugin: 'eclipse'
+	apply plugin: 'maven'
 	apply plugin: 'project-report'
 //	apply plugin: 'org.asciidoctor.convert'
 	
@@ -70,10 +90,10 @@ subprojects {
 	
     // Disable the test report for the individual test task
     test {
-        reports.html.enabled = false
-        testLogging {
-        	events "passed", "skipped", "failed"
-    	}
+        reports.html.enabled = true
+//        testLogging {
+//        	events "passed", "skipped", "failed"
+//    	}
     }    
 }
 
