--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -1,21 +1,3 @@
-//plugins {
-//    id 'org.asciidoctor.convert' version '1.5.7'
-//}
+apply from: '../buildSrc/asciidoctor.gradle'
 
-apply plugin: 'org.asciidoctor.convert'
-
-asciidoctor {
-    backends 'html', 'pdf'
-    sources {
-        include 'software-catalog.adoc' 
-    }
-    attributes \
-        'build-gradle': file('build.gradle'),
-        'toc': 'left',
-        'header_footer': true,
-        'setanchors': '',
-        'idprefix': '',
-        'idseparator': '-'
-}
-
-//build.finalizedBy(asciidoctor)
+build.finalizedBy(asciidoctor)
