--- a/client-bowman/build.gradle
+++ b/client-bowman/build.gradle
@@ -1,6 +1,6 @@
-plugins { 
-	id "io.spring.dependency-management" version "1.0.4.RELEASE" 
-}
+//plugins { 
+//	id "io.spring.dependency-management" version "1.0.4.RELEASE" 
+//}
 
 jar {
     baseName = 'nuss-software-catalog-client-bowman'
@@ -17,6 +17,8 @@ dependencies {
 //    compile('com.fasterxml.jackson.core:jackson-annotations:2.8.0')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+apply plugin: "io.spring.dependency-management"
 
 dependencyManagement {
     imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
